test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/trait_coherence_dup/trait_coherence_dup/src/lib.sw
library;

use standards::{src5::{State}};
use sway_libs::{_owner};
