test/src/e2e_vm_tests/test_programs/should_fail/abi_associated_const_multiple_same_name/src/main.sw
library;

abi ConstantId {
    const ID: u32;
    const ID: u32;
}
